myfiles/deployment1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment
 labels:
  author: intelliqit
  type: proxy
spec:
 replicas: 3
 selector:
  matchLabels:
   type: proxy
 template:
  metadata:
   name: nginx-pod
   labels:
    type: proxy
  spec:
   containers:
    - name: nginx
      image: nginx
...
