myfiles/node-affinity-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment
 labels:
  author: intelliqit
  type: proxy
spec:
 replicas: 2
 selector:
  matchLabels:
   type: proxy
 template:
  metadata:
   name: nginx-pod
   labels:
    type: proxy
  spec:
   containers:
    - name: nginx
      image: nginx
   affinity:
     nodeAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
         nodeSelectorTerms:
           - matchExpressions:
               - key: disktype
                 operator: In
                 values:
                   - ssd
...
