myfiles/node-affinity-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    author: intelliqit
    type: proxy
spec:
  containers:
    - name: nginx
      image: nginx
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: disktype
                operator: In
                values:
                  - ssd
