myfiles/pod-definition7.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: httpd-pod
 labels:
  type: webserver
  author: intelliqit
spec:
 containers:
  - name: myhttpd
    image: httpd
...
