myfiles/tolerations-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    author: intelliqit
spec:
  containers:
    - name: webserver
      image: tomee
      ports:
        - containerPort: 8080
          hostPort: 8080
  tolerations:
    - key: "node"
      operator: "Equal"
      value: "intelliqit"
      effect: "NoSchedule"
