myfiles/service1.yml
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-service
 labels:
  author: intelliqit
spec:
 ports:
  - targetPort: 80
    port: 80
 selector:
  type: proxy
