myfiles/service2.yml
---
apiVersion: v1
kind: Service
metadata:
 name: httpd-service
 labels:
  author: intelliqit
spec:
 type: LoadBalancer
 ports:
  - targetPort: 80
    port: 80
 selector:
  type: webserver
  author: intelliqit
...
